--- a/data_explore/data_explore.Rmd
+++ b/data_explore/data_explore.Rmd
@@ -26,7 +26,7 @@ dir_anx <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO')
 dir_fig <- file.path(dir_git, 'figures')
 dir_data <- file.path(dir_git, 'data')
 
-setwd('data_explore')
+if(basename(getwd()) != 'data_explore') setwd('data_explore')
 source('data_explore_fxns.R')
 ### When knitting this, it automatically sets WD to be this directory...
 ### the 'setwd()' is there for running by chunk
@@ -363,7 +363,7 @@ ggsave(plot = barchart_spp_risk_quads,
 
 
 <!-- # Multiple species maps per quadrant -->
-``` {r child = 'data_explore_pt3.Rmd', eval = FALSE}
+``` {r child = 'data_explore_pt3.Rmd', eval = TRUE}
 ```
 
 
