--- a/data_explore/data_prep.Rmd
+++ b/data_explore/data_prep.Rmd
@@ -9,6 +9,7 @@ output: html_document
 
 library(readr)
 library(data.table)
+library(ggplot2)
 library(tidyr)
 library(dplyr)
 library(stringr)
@@ -23,8 +24,9 @@ dir_anx <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO')
 dir_fig <- file.path(dir_git, 'figures')
 dir_data <- file.path(dir_git, 'data')
 dir_data_remote <- file.path(dir_N, 'git-annex/globalprep/_raw_data')
+scenario <- 'v2016'
 
-setwd('data_explore')
+if(basename(getwd()) != 'data_explore') setwd('data_explore')
 source('data_explore_fxns.R')
 ### When knitting this, it automatically sets WD to be this directory...
 ### the 'setwd()' is there for running by chunk
@@ -36,15 +38,46 @@ gather spp_all, spp_am, spp_am_v_iucn, spp_list_w_area_all and _trimmed into dat
 
 
 ```{r get_spp_list, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
-### get spp_all_complete from git-annex, bring to local repo
-spp_all_remote <- read.csv(file.path(dir_anx, 'v2016/int/spp_all_complete.csv'), stringsAsFactors = FALSE)
+### get spp_all_complete from git-annex, bring to local repo.  The spp_all_complete
+### file was created in ohiprep/globalprep/SPP_ICO/data_prep_SPP.R, running the
+### function create_spp_master_lookup(source_pref = 'iucn', fn_tag = '_complete', reload = TRUE)
+spp_all_remote <- read.csv(file.path(dir_anx, scenario, 'int/spp_all_complete.csv'), 
+                           stringsAsFactors = FALSE)
 write.csv(spp_all_remote, file.path(dir_data, 'spp_all.csv'), row.names = FALSE)
 
-### create spp_am_v_iucn
+### create spp_am_v_iucn: the whole maplist narrowed down to just the overlapping species.
+### Overlaps detected from spatial_source containing 'iucn' (b/c source_pref = 'iucn' above),
+### that also have a non-NA AquaMaps ID code.
 spp_am_v_iucn <- spp_all_remote %>%
   filter(str_detect(spatial_source, 'iucn') & !is.na(am_sid)) %>%
   unique()
-write.csv(spp_am_v_iucn, file.path(dir_data, 'spp_am_v_iucn.csv'), row.names = FALSE)
+write.csv(spp_am_v_iucn, file.path(dir_data, 'spp_am_v_iucn.csv'), 
+          row.names = FALSE)
+
+### pull spp_iucn_marine.csv from git-annex and bring to local repo
+spp_iucn_marine <- read.csv(file.path(dir_anx, scenario, 'int/spp_iucn_marine.csv'), 
+                            stringsAsFactors = FALSE)
+spp_iucn_marine <- spp_iucn_marine %>%
+  select(sciname, iucn_sid, iucn_category = category, popn_trend, parent_sid, subpop_sid)
+write.csv(spp_iucn_marine, file.path(dir_data, 'spp_iucn_marine.csv'), 
+          row.names = FALSE)
+          
+### pull spp_iucn_maps_all.csv from git-annex and bring to local repo
+spp_iucn_maps <- read.csv(file.path(dir_anx, scenario, 'int/spp_iucn_maps_all.csv'), 
+                            stringsAsFactors = FALSE)
+spp_iucn_maps <- spp_iucn_maps %>%
+  filter(!str_detect(spp_group, 'MARINEFISH')) %>%
+  filter(id_no %in% spp_iucn_marine$iucn_sid)   ### ditch terrestrial and freshwater spp
+write.csv(spp_iucn_maps, file.path(dir_data, 'spp_iucn_maps.csv'), 
+          row.names = FALSE)
+
+### pull speciesoccursum.csv from git-annex and bring to local repo
+spp_am <- read.csv(file.path(dir_data_remote, 'aquamaps/v2015/csv/speciesoccursum.csv'), 
+                   stringsAsFactors = FALSE)
+spp_am <- spp_am %>%
+  mutate(sciname = paste(str_trim(genus), str_trim(species), sep = ' '))
+write.csv(spp_am, file.path(dir_data, 'spp_am.csv'), 
+          row.names = FALSE)
 
 ```
 
@@ -62,6 +95,8 @@ am_spp_cells   <- read_csv(file.path(dir_anx, 'explore_am_v_iucn/am_spp_cells_20
 ```
 
 ```{r get_spp_list, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
+### Create files for species list with area info, both a complete list and a trimmed list
+
 data_file <- file.path(dir_data, 'spp_list_w_area_all.csv')
 reload = TRUE
 if (!file.exists(data_file) | reload) {
@@ -88,3 +123,4 @@ spp_list <- spp_list %>%
 write.csv(spp_list, file.path(dir_data, 'spp_list_w_area_trimmed.csv'))
 
 ```
+
