--- a/ms_4_figs.Rmd
+++ b/ms_4_figs.Rmd
@@ -1,51 +1,8 @@
 
 # Figures
 
-### Figure 1(a)?:
-
-![](figures/bar_by_taxa_all.png)
-
-Number and proportion of species, listed by taxa, included in each dataset: IUCN, AquaMaps, or both.
-
-### Figure 1 (b, c):
-
-![](figures/all_aquamaps_map.png)
-
-![](figures/all_iucn_map.png)
-
-Global marine species richness according to (a) AquaMaps dataset and (b) IUCN dataset.
-
-
-### Figure 3 (a):
-
-![](figures/AreaRatiovsPercOverlap.png)
-
-For each paired-map species, we calculated two dimensions of spatial alignment: _distribution alignment_, which we defined as the proportion of the smaller range intersecting the larger range (where on the map); and _extent alignment_, which we defined as the ratio of the smaller range to the larger range (how much of the map).  For a species whose distribution is well understood and described in both datasets, we would expect to see a value near 100% for each dimension of alignment.  
-
-``` {r tally_quad_counts, echo = FALSE}
-dist_median <- round(median(spp_map_pairs$sm_perc,    na.rm = TRUE), 1)
-area_median <- round(median(spp_map_pairs$area_ratio, na.rm = TRUE), 1)
-q1_count <- sum(spp_map_pairs$sm_perc >= dist_median & spp_map_pairs$area_ratio >= area_median)
-q2_count <- sum(spp_map_pairs$sm_perc <  dist_median & spp_map_pairs$area_ratio >= area_median)
-q3_count <- sum(spp_map_pairs$sm_perc >= dist_median & spp_map_pairs$area_ratio <  area_median)
-q4_count <- sum(spp_map_pairs$sm_perc <  dist_median & spp_map_pairs$area_ratio <  area_median)
-```
-
-* The upper right quadrant (quadrant 1) comprises species whose maps largely agree (better than median value) in both spatial distribution and the extent of described ranges. 
-(n = `r q1_count`; `r round(q1_count/nrow(spp_map_pairs) * 100, 1)` %)
-* The upper left quadrant (quadrant 2) comprises species whose maps agree well in distribution, but disagree in extent.
-(n = `r q2_count`; `r round(q2_count/nrow(spp_map_pairs) * 100, 1)` %)
-* The lower right quadrant (quadrant 3) includes species for which the paired maps generally agree in range extent, but disagree on where those ranges lie - a more worrisome mismatch than that indicated by quadrant 2.
-(n = `r q3_count`; `r round(q3_count/nrow(spp_map_pairs) * 100, 1)` %)
-* The lower left quadrant (quadrant 4) indicates species for which the map pairs agree poorly in both area and distribution. 
-(n = `r q4_count`; `r round(q4_count/nrow(spp_map_pairs) * 100, 1)` %)
-
-### Figure 3 (b):
-
-![](figures/barchart_spp_gp_quads.png)
-
-Spatial alignment of paired-map species by taxonomic group.
-
+Keep figures in the text while working, for easier editing and captioning.  
+Put figures here once the manuscript is done
 
 
 ### Figure 4
