--- a/data_explore/data_explore_quadmaps.Rmd
+++ b/data_explore/data_explore_quadmaps.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Data Exploration quad maps: IUCN and AquaMaps'
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, echo = FALSE, warning = FALSE, message = FALSE}
