--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -4,15 +4,17 @@ output: pdf_document
 
 # Introduction
 
-___Peer? Dive? Cast a scientific eye?___ _beneath the waves anywhere in the world - a moody kelp forest, a bustling coral reefscape, the frigid depths beneath a polar ice sheet, the endless blue of the open ocean.  Which species would you expect to find, and which species would be woefully out of place?_ Mapping and predicting species distributions is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  Knowing where individuals of a species exist, and where they thrive, provides foundational information for 
+_Peer beneath the waves anywhere in the world - a moody kelp forest, a bustling coral reefscape, the frigid depths beneath a polar ice sheet, the endless blue of the open ocean.  Which species would you expect to encounter, and which species would be woefully out of place?_ Mapping and predicting species distributions is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  Knowing where individuals of a species exist, and where they thrive, provides foundational information for 
  understanding species ranges and diversity,
  predicting species responses to human impacts and climate change,
  and managing and protecting species effectively.
 A rich literature tackles the many dimensions of these questions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. <!--In the oceans there are now two such global repositories--> Two important repositories _predict_ marine species ranges throughout the world's oceans  <!--_(if we define it narrowly; OBIS is global species occurrences, but not quite range or distribution maps)_--> – AquaMaps modeled species distribution maps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) species range maps (REF).  These spatial datasets are used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, Selig et al. 2013), evaluating global biodiversity patterns (Coll et al. 2010, Martin et al. 2014), predicting range shifts (Molinos et al. 2015), and setting conservation priorities (Klein et al. 2015). The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.
+One major outcome of this body of science is the various compiled databases of species distribution maps. <!--In the oceans there are now two such global repositories--> Two important repositories _predict_ marine species ranges throughout the world's oceans – AquaMaps modeled species distribution maps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) species range maps (REF).  These spatial datasets are used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, Selig et al. 2013), evaluating global biodiversity patterns (Coll et al. 2010, Martin et al. 2014), predicting range shifts (Molinos et al. 2015), and setting conservation priorities (Klein et al. 2015). 
 
-Importantly, biases in taxonomic or spatial coverage within a dataset could shift management or conservation actions away from places or species that are most in need.(maybe Jetz 2008?)  Errors of commission (false indications of presence) or omission (false indications of absence) could lead to inefficient or ineffective marine reserve systems and management plans. (Rondinini et al. 2006) (Jetz 2008?)
+The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.
+
+Importantly, biases in taxonomic or spatial coverage within a dataset could shift management or conservation actions away from places or species that are most in need.(maybe Jetz 2008?)  Inaccurate indications of presence or absence could lead to inefficient or ineffective marine reserve systems and management plans. (Rondinini et al. 2006) (Jetz 2008?)
 
 To understand the implications of differences between these two datasets, we compared how each data set represents the global spatial and taxonomic distribution of species.  For the relatively small number of species mapped in both datasets, we examined how well the species maps align. We then subjected two recent marine biodiversity studies - the Ocean Health Index biodiversity goal (Halpern et al. 2012) and a global MPA gap analysis (Klein et al. 2015) - to a sensitivity analysis, substituting one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity.
 
@@ -28,7 +30,7 @@ The IUCN publishes species range maps as spatial vector polygon shapefiles, bund
 
 AquaMaps develops species distribution maps based on modeled relative environmental suitability.  For each mapped species, environmental preferences (e.g. temperature, depth, salinity) are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species.
 
-IUCN range maps are intended to include all possible regions in which a species may be present, with the caveat that this does not imply the species is evenly distributed everywhere within the boundaries of the map(REF).  AquaMaps modeled distribution maps provide a more nuanced prediction of species presence within the extent of occurrence, but the model may not capture all the complexities that drive species distribution (REF).  Due to these differences in methodology and intent, IUCN range maps are more likely to overpredict species presence while AquaMaps modeled distribution maps are more likely to underpredict species presence.(REF and REF)
+IUCN range maps are intended to include all possible regions in which a species may be present, with the caveat that this does not imply the species is evenly distributed everywhere within the boundaries of the map(REF).  AquaMaps modeled distribution maps provide a more nuanced prediction of species presence within the extent of occurrence, but the model may not capture all the complexities that drive species distribution (REF).  Due to these differences in methodology and intent, IUCN range maps are more likely to overpredict species presence while AquaMaps modeled distribution maps are relatively more likely to underpredict species presence.(REF and REF)
 
 <!--
 * _How does AquaMaps select species?  based on data available from OBIS/GBIF and Fishbase?_
@@ -132,13 +134,21 @@ Examining spatial alignment by taxonomic group (FIG 3b), we found that certain t
 
 <!--AquaMaps accounts for seafloor depth as a limiting factor, highly constraining the predicted habitat for photosynthesizing corals, while IUCN maps for coral species often include wide buffers that would extend far beyond appropriate depth for coral habitat, thus likely overestimating the actual species range (see SOM).  A similar mechanism may also drive poor extent alignment of other demersal and reef-associated organisms.-->
 
-Quadrant 1 contains species whose map pairs agree in both spatial distribution and the extent of described ranges, as we would expect for well-understood species.  Excellent and valuable, but not particularly interesting.  The extent-misaligned maps contained in quadrant 2, however, provide a richer set of examples to understand the fundamental differences between the datasets; examining these, we can identify several mechanisms that could cause such extent misalignment.  
+Quadrant 1 contains species whose map pairs agree in both spatial distribution and the extent of described ranges, as we would expect for well-understood species.  Excellent and valuable, but not particularly interesting.  
 
-For `r n_q2_am_sm` of `r n_q2` species in this quadrant (`r round((n_q2_am_sm/n_q2) * 100, 1)`%), the IUCN extent is larger than the AquaMaps extent.  By itself, this is not surprising; but for many of these species, a quick look at the maps (see SOM for examples) shows that the IUCN range hews closely to the AquaMaps range, while adding a significant buffer zone.  Coral species dominate this quadrant (`r n_q2_corals` coral species - `r round(n_q2_corals/n_corals * 100, 1)`% of all corals and `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in quadrant 2).  We suspect that many of these extent-misaligned map pairs can be easily explained: most corals and reef-associated organisms prefer shallower waters; seafloor depth is explicitly modeled in AquaMaps, but not explicitly considered in IUCN range considerations. ___include recommendation for IUCN range maps to be clipped to bathymetry where appropriate? or save til end?___
+The extent-misaligned maps contained in quadrant 2 provide a richer set of examples to understand the fundamental differences between the datasets; examining these, we can identify several mechanisms that could cause such extent misalignment.  
 
-___wrap up something with quadrants 3 and 4:___ _In several instances, the AquaMaps map conformed to a small, local subset of the IUCN map (see SOM for examples - what was the Q4 graph?), in some cases due to some point locality observations being rejected by AquaMaps experts (EXAMPLES) and in other cases due to differences in species identification._ ___bleh - this needs help. Evidence? examples?___
+For `r n_q2_am_sm` of `r n_q2` species in this quadrant (`r round((n_q2_am_sm/n_q2) * 100, 1)`%), the IUCN extent is larger than the AquaMaps extent.  By itself, this is not surprising; but for many of these species, a quick look at the maps (see SOM for examples) shows that the IUCN range hews closely to the AquaMaps range, while adding a significant buffer zone.  Coral species dominate this quadrant (`r n_q2_corals` coral species - `r round(n_q2_corals/n_corals * 100, 1)`% of all corals and `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in quadrant 2).  We suspect that many of these extent-misaligned map pairs can be easily explained: most corals and reef-associated organisms prefer shallower waters; seafloor depth is explicitly modeled in AquaMaps, but not explicitly considered in IUCN range considerations. (For examples and details, see SOM) ___include recommendation for IUCN range maps to be clipped to bathymetry where appropriate? or save til end?___ 
 
-Poorly-aligned rangemaps, regardless of taxon or extinction risk category, indicate species that could benefit from further expert study. ___is this just 'duh'? is there something more important I can say?___
+The extent-alignment of species maps found in quadrant 3 can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges are frequently overextended into unsuitable habitat, as in the case of many quadrant 2 species, but at the same time, AquaMaps aggressively extrapolates distribution of presence into locations where IUCN predicts absence.  This results in an area ratio close to 1, giving the impression of extent alignment. ___wrap up something with quadrants 3 and 4:___ _In several instances, the AquaMaps map conformed to a small, local subset of the IUCN map (see SOM for examples - what was the Q4 graph?), in some cases due to some point locality observations being rejected by AquaMaps experts (EXAMPLES) and in other cases due to differences in species identification._ ___bleh - this needs help. Evidence? examples?___
+
+Quadrant 4 species maps seem to suffer from the same problem as those in quadrant 3, but here the AquaMaps extrapolation extends even further, pushing the extent alignment ratio lower.  In this quadrant, AquaMaps predicts a larger extent than IUCN for 70% of species represented in this quadrant, compared with just 30% of species in the entire set of overlapping maps. 
+
+_how many species are "reviewed" in each quadrant? how many are data poor?_
+overall: 21% of overlapping species are data poor (model based on fewer than 10 cell-occurrences)
+q1: 8.2% (33/401); q2: 22.1% (151/682); q3: 16.5% (114/692); q4: 39.7% (159/401)
+Overall: 13.4% of species reviewed...
+q1: 24.9%; q2: 14.7%; q3: 9.5%; q4: 6.2%
 
 _Other hypotheses/case studies to highlight other possible mechanistic differences?_
 
@@ -182,4 +192,7 @@ ___Recommendations on data use?___
     * understand that range maps tend to overestimate presence; AquaMaps are less likely to overestimate presence, but trade off for overestimating absence. Both better than simple point locality data.
     * to use both together:
         * consider setting AM presence threshold to 0% to create an extent of occurrence map, more like IUCN map.
-        * consider de-weighting IUCN for area-weighted calcs, for taxa in which IUCN is consistently overestimating presence
+        * consider additional filters and criteria, e.g. "reviewed" or "occurcells" 
+        * consider clipping IUCN ranges to bathymetry for depth-limited species or taxa
+        * or consider de-weighting IUCN for area-weighted calcs, for taxa in which IUCN is consistently overestimating presence
+        
