--- a/data_explore/data_prep.Rmd
+++ b/data_explore/data_prep.Rmd
@@ -114,13 +114,16 @@ spp_list <- spp_list %>%
   filter(!is.na(sm_perc)) %>%
   ### will ditch the ones where no IUCN polygon exists - or are these species
   ### whose ranges only occur in cells beyond the LOICZID grid?
-  filter(!str_detect(spatial_source, 'subpop') & !str_detect(spatial_source, 'alias'))
+  filter(!str_detect(spatial_source, 'subpop') & !str_detect(spatial_source, 'alias')) 
 spp_list <- spp_list %>%
   left_join(read.csv(file.path(dir_data, 'sciname_lookups/spp_groupnames.csv'), 
                      stringsAsFactors = FALSE),
-            by = 'spp_group')
+            by = 'spp_group') %>%
+  left_join(spp_am %>% select(am_sid = speciesid, occurcells),
+            by = 'am_sid')
 
-write.csv(spp_list, file.path(dir_data, 'spp_list_w_area_trimmed.csv'))
+write.csv(spp_list, file.path(dir_data, 'spp_list_w_area_trimmed.csv'), 
+          row.names = FALSE)
 
 ```
 
